<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Feedback</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="username_label">Username</string>
    <string name="login_error_1">Please enter username and password</string>
    <string name="login_label">Login using Facebook</string>
    <string name="signup_label">Sign Up</string>
    <string name="password_label">Password</string>
    <string name="login_error_2">Invalid username or password</string>
    <string name="sign_up_error_1">Sign up error</string>
    <string name="signup_success">Successfully Signed up, please log in.</string>
    <string name="login_error_3">No such user exist, please signup</string>
    <string name="login_success">Successfully Logged in</string>
    <string name="login_progress">Logging In. Please wait…</string>
    <string name="signup_progress">Signing Up. Please wait…</string>
    <string name="logout_error">Logout error</string>
    <string name="logout_progress">Logging out. Please wait…</string>
    <string name="feedback_progress">Fetching feedback. Please wait…</string>
    <string name="app_id">422900231236958</string>
    <string name="feedback_label">Feedback</string>
    <string name="save_feedback">Save Feedback</string>
    <string name="save_error_1">Please provide rating</string>
    <string name="save_error_2">Please add a comment</string>
    <string name="save_error_3">Server error. Please try again</string>
    <string name="save_progress_1">Saving your valuable feedback. Please wait…</string>
    <string name="save_parse_error_1">Problem saving your feedback. Please try again.</string>
    <string name="save_parse_success_1">Your feedback has been saved. Thanks. Your feedback would be made visible after moderation. Please be patient.</string>
    <string name="update_button_label">Update Feedback</string>
    <string name="update_feedback_progress">Updating your feedback. Please wait…</string>
    <string name="update_error_1">Error updating feedback. Please try again.</string>
    <string name="get_username_progress">Getting username from Facebook. Please wait…</string>
    <string name="title_activity_about">About Me</string>
    <string name="action_info">Info</string>
    <string name="action_share">Share</string>
    <string name="action_invite">Invite</string>
    <string name="action_renew">Refresh</string>
    <string name="about_content">Hi, I am Apeksha and I do <b>Tarot Reading</b> professionally. \n\nI have expertize in reading <b>Tarot Cards</b> and <b>Angel Cards</b>. \n\nTarot card reading is completely a personal and confidential reading. One can ask questions related to their past, present and future life situations. Questions can be related to any aspects of life such as Health, Education, Career, Relationships, Marriage, Family, Friends and many more. \n\nThe reading process is based on meditation power which helps gather vibes based on your full-name and accordingly i analyze and interpret the cards. Your main question in mind will appear in the first general reading spread and further will formulate more spreads for all the different questions you have. The spreads will answer your questions. \n\nI have done more than 150 reads so far. If you wish to provide feedback, please do comment on your reading experience and give rating accordingly. Your inputs and feedback will be very helpful. \n\nTo know the root causes, effects and solutions for your past, present and future life situations. Experience a unique reading session with me. You can contact me using the email icon in the bottom right corner of the screen.\n\n\n</string>
    <string name="get_username_error">Problem fetching information from Facebook</string>
    <string name="invitation_title">Send Tarot Feedback App Invite</string>
    <string name="invitation_message">This app is for Tarot Reading feedback performed by Apeksha. Please share your feedback</string>
    <string name="invitation_cta">Install!</string>

</resources>
