<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_renew"
        android:icon="@drawable/ic_autorenew"
        android:orderInCategory="100"
        android:title="@string/action_renew"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_info"
        android:icon="@drawable/ic_info"
        android:orderInCategory="101"
        android:title="@string/action_info"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_share"
        android:icon="@drawable/ic_share"
        android:orderInCategory="102"
        android:title="@string/action_share"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_invite"
        android:icon="@drawable/ic_share"
        android:orderInCategory="103"
        android:title="@string/action_invite"
        app:showAsAction="ifRoom" />
</menu>
